--- a/app/views/controlledger.html
+++ b/app/views/controlledger.html
@@ -1,4 +1,4 @@
-<div class="container table_container table-container-width no-padding-hr" style="margin-top:45px;">
+<div class="container table_container table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInBalanceSheet':!isSearched}">
     <div class="row no-margin-hr">
         <div class="col-md-12 no-padding-hr">
             <ul class="list-styles no-padding-hr">
@@ -7,7 +7,7 @@
                     <span class="text-value">{{ledger_amt| INRCurrency}}</span>
                 </li>
                 <li ng-if="isSearched" class="listheightvalues">
-                    <span class="text-name">{{searchObj.ledger_name}} &#58;</span>
+                    <span class="text-name">{{props.ledger_name}} &#58;</span>
                     <span class="text-value">{{ledger_amt| INRCurrency}}</span>
                 </li>
                 <li class="custom-content-border sub-listheightvalues actionsmenu" ng-repeat="ltypes in ltypselements" ng-click="voucherSelection(ltypes.display_name, ltypes.amount, ltypes.ltype, ltypes.gl_id, ltypes.sl_id, ltypes.rootgroup_id)" on-hold="favouriteSelection(ltypes.display_name, ltypes.gl_id, ltypes.ltype)">
