--- a/app/views/ledger.html
+++ b/app/views/ledger.html
@@ -1,4 +1,4 @@
-<div class="container table_container table-container-width no-padding-hr" style="margin-top:45px;">
+<div class="container table_container table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInBalanceSheet':!isSearched}">
     <div class="row no-margin-hr">
         <div class="col-md-12 no-padding-hr">
             <ul class="list-styles no-padding-hr">
