--- a/app/views/monthWise.html
+++ b/app/views/monthWise.html
@@ -1,4 +1,4 @@
-<div class="container table_container table-container-width no-padding-hr" style="margin-top:65px;">
+<div class="container table_container table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInVocherScreen':!isSearched}">
     <div class="row no-margin-hr">
         <div class="col-md-12 no-padding-hr">
             <ul class="list-styles no-padding-hr">
@@ -12,7 +12,7 @@
                 </li>
                 <li class="custom-content-border sub-listheightvalues actionsmenu" ng-repeat="month in mothwisedata" ng-click="monthSelection(month.mth,month.numberofdays,month.monthyear)">
                     <span class="sublist-text-name">{{month.mth}}</span>
-                    <span class="sublist-text-value">{{(month.amount) | INRCurrency}}</span>
+                    <span class="sublist-text-value">{{month.amount > 0 ?((month.amount | INRCurrency) + " Dr") : (((-1 * month.amount) | INRCurrency) + " Cr")}}</span>
                 </li>
             </ul>
         </div>
